syntax = "proto3";

package pb;

option go_package = "/pb";
service AgentService {
    rpc NotifyTargetTraceids(stream TargetInfo) returns (Reply) {}
    rpc NotifyPeerFilterOver(Req) returns(Reply){}
}
service ProcessService {
    rpc SetTargetTraceid(TraceidRequest) returns (Reply) {}
    rpc SendTraceData(stream TraceData) returns (Reply) {}
    rpc SendTargetIds(stream TargetInfo) returns (Reply) {}
    rpc NotifyFilterOver(Addr) returns(Reply){}
    rpc NotifySendOver(Addr) returns(Reply){}
}
message TraceData {
   bytes tracedata = 1;
}
message TargetInfo {
    int64 traceid = 1;
    int64 checkcur =2;
}
message Reply {
    bytes reply = 1;
}
message Req {
    bytes Req = 1;
}

message Addr {
    string addr = 1;
}
message TraceidRequest {
    bytes traceid = 1;
}

